--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -7,4 +7,48 @@
     android:layout_height="match_parent"
     tools:context=".ActivityAuthorization">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/textInputEditText"
+      android:layout_width="254dp"
+      android:layout_height="49dp"
+      android:hint="login"
+      app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.496"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.935" />
+
+  <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/textInputEditText2"
+      android:layout_width="254dp"
+      android:layout_height="49dp"
+      android:layout_marginBottom="368dp"
+      android:hint="password"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.496"
+      app:layout_constraintStart_toStartOf="parent" />
+
+  <Button
+      android:id="@+id/button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="312dp"
+      android:text="Log in"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.249"
+      app:layout_constraintStart_toStartOf="parent" />
+
+  <TextView
+      android:id="@+id/textView2"
+      android:layout_width="124dp"
+      android:layout_height="104dp"
+      android:layout_marginBottom="192dp"
+      android:text="TextView"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
