--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -24,10 +24,10 @@
         android:layout_height="49dp"
         android:layout_marginBottom="400dp"
         android:hint="@string/authorization_widgets_inputPassword"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -46,10 +46,9 @@
         android:layout_width="256dp"
         android:layout_height="128dp"
         android:layout_marginBottom="120dp"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
@@ -60,6 +59,15 @@
         android:text="@string/authorization_widgets_showPassword_enable"
         app:layout_constraintEnd_toEndOf="@+id/activityAuthorization_widgets_inputPassword"
         app:layout_constraintStart_toEndOf="@+id/activityAuthorization_widgets_login"
+        app:layout_constraintTop_toBottomOf="@+id/activityAuthorization_widgets_inputPassword" />
+
+    <TextView
+        android:id="@+id/activityAuthorization_widgets_responseStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/activityAuthorization_widgets_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activityAuthorization_widgets_inputPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
