--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -50,6 +50,7 @@
             android:id="@+id/register"
             android:layout_width="168dp"
             android:layout_height="70dp"
+            android:onClick="register"
             android:text="@string/registration_widgets_register" />
 
         <TextView
