--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/responseStutusRegister"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityRegistration">
+    tools:context=".authorization.ActivityRegistration">
 
     <LinearLayout
         android:layout_width="305dp"
